tests/compile/ir3_removed_in_without_deprecated.stderr
error: #[plexus_macros::removed_in("...")] requires a companion #[deprecated] attribute on the same item — `removed_in` by itself has no meaning. Add `#[deprecated(since = "...", note = "...")]` alongside, or remove the `#[removed_in]` attribute.
  --> tests/compile/ir3_removed_in_without_deprecated.rs:16:5
   |
16 |     #[plexus_macros::removed_in("0.6")]
   |     ^

warning: unused import: `futures::stream::Stream`
 --> tests/compile/ir3_removed_in_without_deprecated.rs:5:5
  |
5 | use futures::stream::Stream;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
